@@ -5,7 +5,6 @@ Non-version-specific:
 
 For 0.2.2:
 * WEBSITE!
-* Finish at least some part of slot interface
 
 For 0.2.3:
 * Missing format directives (c and f)
